--- a/src/sass/partials/_cart.scss
+++ b/src/sass/partials/_cart.scss
@@ -16,6 +16,7 @@
       @include accordion-open();
       padding: ($base-size * 1.5) 0 0 0;
     }
+
   }
 
   &__summary {
@@ -67,11 +68,12 @@
       &:hover .btn-quantity--lt {
         opacity: 1;
       }
+
     }
+
   }
 
-  &__product {
-    // CODE CHANGED
+  &__product { // CODE CHANGED
     width: 170px; // CODE CHANGED
   }
 
@@ -92,6 +94,7 @@
       line-height: 1.3;
       letter-spacing: 0.5px;
     }
+
   }
 
   &__product-details-label {
@@ -103,6 +106,7 @@
       position: absolute;
       content: ':';
     }
+
   }
 
   // CODE ADDED END
@@ -125,7 +129,9 @@
       &:hover {
         color: lighten($color-main, 3%);
       }
+
     }
+
   }
 
   &__order-price {
@@ -143,10 +149,11 @@
     border-top: 1px solid lighten($color-dark, 70%);
     padding: $base-size 0 0 0;
 
-    input,
-    button {
+    input, button {
       width: 100%;
       margin-bottom: ($base-size / 2);
     }
+
   }
+
 }
